Bug 175345 - Crash when clicking on answer's notification
Summary: Crash when clicking on answer's notification
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kcal (other bugs)
Version First Reported In: 4.1
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-16 22:08 UTC by Christophe Marin
Modified: 2008-11-21 03:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2008-11-16 22:08:20 UTC
Version:           4.1 rc1 (using 4.1.73 (KDE 4.1.72 (KDE 4.2 >= 20081112)) "release 3.1", KDE:KDE4:UNSTABLE:Desktop / openSUSE_Factory)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27.5-2-pae

Testcase :

While doing tests, I created an event in korganizer and sent an invitation to one of my email addresses.

The crash occurs when I click on the answer notification email :

icalerror.c:104: BADARG: Bad argument to function
kmail: icalerror.c:106: icalerror_set_errno: Assertion `0' failed.
*** KMail got signal 6 (Crashing)

--

bt :

Application: KMail (kmail), signal SIGABRT
[?1034h[Thread debugging using libthread_db enabled]
0xb4bba56c in nanosleep () from /lib/libc.so.6
[Current thread is 1 (Thread 0xb3ed7920 (LWP 23014))]

Thread 2 (Thread 0xb0d86b90 (LWP 23026)):
#0  0xb62becd8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0xb589584c in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0xb588a9c6 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb589485e in ?? () from /usr/lib/libQtCore.so.4
#4  0xb62bb030 in start_thread () from /lib/libpthread.so.0
#5  0xb4bf148e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb3ed7920 (LWP 23014)):
[KCrash Handler]
#5  0xb4b4a9f6 in raise () from /lib/libc.so.6
#6  0xb4b4c2f8 in abort () from /lib/libc.so.6
#7  0xb4b437d0 in __assert_fail () from /lib/libc.so.6
#8  0xb6e4fefc in icalerror_set_errno (x=ICAL_BADARG_ERROR) at icalerror.c:106
#9  0xb6e4b36e in icalcomponent_get_first_component (c=0x0, kind=ICAL_ANY_COMPONENT) at icalcomponent.c:658
#10 0xb6e4b3a7 in icalcomponent_get_first_real_component (c=0x0) at icalcomponent.c:704
#11 0xb6e16697 in icalclassify_find_attendee (c=0x0, attendee=0x87873e8 "mailto:krop@free.fr") at icalclassify.c:146
#12 0xb6e168de in icalclassify_reply_accept (comp=0xbfd9547c, match=0xbfd9540c, user=0xb6dedd6a "") at icalclassify.c:532
#13 0xb6e1628c in icalclassify (c=0x896c1c0, match=0x0, user=0xb6dedd6a "") at icalclassify.c:801
#14 0xb6d8cea4 in KCal::ICalFormat::parseScheduleMessage (this=0xbfd956d8, cal=0xbfd95864, messageText=@0xbfd9582c) at /usr/src/debug/kdepimlibs-4.1.73/kcal/icalformat.cpp:548
#15 0xb6d9aa75 in formatICalInvitationHelper (invitation=
      {static null = {<No data fields>}, static shared_null = {ref = {_q_value = 20269}, alloc = 0, size = 0, data = 0xb5a6d45a, clean = 0, simpletext = 0, righttoleft = 0, asciiCache = 0, capacity = 0, reserved = 0, array = {0}}, static shared_empty = {ref = {_q_value = 646}, alloc = 0, size = 0, data = 0xb5a6d46e, clean = 0, simpletext = 0, righttoleft = 0, asciiCache = 0, capacity = 0, reserved = 0, array = {0}}, d = 0xbfd9582c, static codecForCStrings = 0x0}, mCalendar=0xbfd95864, helper=0xbfd95880, noHtmlMode=true) at /usr/src/debug/kdepimlibs-4.1.73/kcal/incidenceformatter.cpp:1387
#16 0xb6d9c033 in KCal::IncidenceFormatter::formatICalInvitationNoHtml (invitation=
      {static null = {<No data fields>}, static shared_null = {ref = {_q_value = 20269}, alloc = 0, size = 0, data = 0xb5a6d45a, clean = 0, simpletext = 0, righttoleft = 0, asciiCache = 0, capacity = 0, reserved = 0, array = {0}}, static shared_empty = {ref = {_q_value = 646}, alloc = 0, size = 0, data = 0xb5a6d46e, clean = 0, simpletext = 0, righttoleft = 0, asciiCache = 0, capacity = 0, reserved = 0, array = {0}}, d = 0xbfd9588c, static codecForCStrings = 0x0}, mCalendar=0xbfd95864, helper=0xbfd95880) at /usr/src/debug/kdepimlibs-4.1.73/kcal/incidenceformatter.cpp:1553
#17 0xb247f69c in format (this=0x82a0ce0, bodyPart=0xbfd95938, writer=0x85e4c10) at /usr/src/debug/kdepim-4.1.73/plugins/kmail/bodypartformatter/text_calendar.cpp:161
#18 0xb766a88f in KMail::ObjectTreeParser::parseObjectTree (this=0xbfd95a60, node=0x896c6f0) at /usr/src/debug/kdepim-4.1.73/kmail/objecttreeparser.cpp:267
#19 0xb74f0469 in KMReaderWin::parseMsg (this=0x8578a08, aMsg=0x89bfc10) at /usr/src/debug/kdepim-4.1.73/kmail/kmreaderwin.cpp:1618
#20 0xb74e0180 in KMReaderWin::displayMessage (this=0x8578a08) at /usr/src/debug/kdepim-4.1.73/kmail/kmreaderwin.cpp:1551
#21 0xb74e03a0 in KMReaderWin::updateReaderWin (this=0x8578a08) at /usr/src/debug/kdepim-4.1.73/kmail/kmreaderwin.cpp:1491
#22 0xb74e0bcd in KMReaderWin::setMsg (this=0x8578a08, aMsg=0x89bfc10, force=true) at /usr/src/debug/kdepim-4.1.73/kmail/kmreaderwin.cpp:1293
#23 0xb74d97e5 in KMReaderWin::slotMessageArrived (this=0x8578a08, msg=0x89bfc10) at /usr/src/debug/kdepim-4.1.73/kmail/kmreaderwin.cpp:903
#24 0xb74ee54a in KMReaderWin::qt_metacall (this=0x8578a08, _c=QMetaObject::InvokeMetaMethod, _id=34, _a=0xbfd95d3c) at /usr/src/debug/kdepim-4.1.73/build/kmail/kmreaderwin.moc:192
#25 0xb5999580 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#26 0xb599a302 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#27 0xb76dd7d3 in KMail::FolderJob::messageRetrieved (this=0x86f6e20, _t1=0x89bfc10) at /usr/src/debug/kdepim-4.1.73/build/kmail/folderjob.moc:97
#28 0xb76e8821 in KMail::ImapJob::slotGetMessageResult (this=0x86f6e20, job=0x87956d0) at /usr/src/debug/kdepim-4.1.73/kmail/imapjob.cpp:460
#29 0xb76ed844 in KMail::ImapJob::qt_metacall (this=0x86f6e20, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfd95e9c) at /usr/src/debug/kdepim-4.1.73/build/kmail/imapjob.moc:81
#30 0xb5999580 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#31 0xb599a302 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#32 0xb7b4e7f3 in KJob::result(KJob*) () from /usr/lib/libkdecore.so.5
#33 0xb7b4ec99 in KJob::emitResult() () from /usr/lib/libkdecore.so.5
#34 0xb5be34b5 in KIO::SimpleJob::slotFinished() () from /usr/lib/libkio.so.5
#35 0xb5be4723 in KIO::TransferJob::slotFinished() () from /usr/lib/libkio.so.5
#36 0xb5be57ab in KIO::TransferJob::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkio.so.5
#37 0xb5999580 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#38 0xb599a302 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#39 0xb5c90ac7 in KIO::SlaveInterface::finished() () from /usr/lib/libkio.so.5
#40 0xb5c9371f in KIO::SlaveInterface::dispatch(int, QByteArray const&) () from /usr/lib/libkio.so.5
#41 0xb5c910d7 in KIO::SlaveInterface::dispatch() () from /usr/lib/libkio.so.5
#42 0xb5c83a50 in KIO::Slave::gotInput() () from /usr/lib/libkio.so.5
#43 0xb5c83dc3 in KIO::Slave::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkio.so.5
#44 0xb5999580 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#45 0xb599a302 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#46 0xb5bb0d07 in KIO::Connection::readyRead() () from /usr/lib/libkio.so.5
#47 0xb5bb2733 in ?? () from /usr/lib/libkio.so.5
#48 0xb5bb2d86 in KIO::Connection::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkio.so.5
#49 0xb599271b in QMetaCallEvent::placeMetaCall(QObject*) () from /usr/lib/libQtCore.so.4
#50 0xb5994281 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#51 0xb4f778fc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#52 0xb4f7f75e in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#53 0xb7e8afdd in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#54 0xb5984961 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#55 0xb59855d5 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#56 0xb59857cd in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/libQtCore.so.4
#57 0xb59af36f in ?? () from /usr/lib/libQtCore.so.4
#58 0xb46979a8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#59 0xb469b063 in ?? () from /usr/lib/libglib-2.0.so.0
#60 0xb469b221 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#61 0xb59aefb8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#62 0xb5010785 in ?? () from /usr/lib/libQtGui.so.4
#63 0xb598301a in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#64 0xb59831da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#65 0xb5985895 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#66 0xb4f77777 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#67 0x0804a7a0 in main (argc=) at /usr/src/debug/kdepim-4.1.73/kmail/main.cpp:146
Comment 1 Christophe Marin 2008-11-16 22:09:27 UTC
reassign kdepimlibs/kcal
Comment 2 Allen Winter 2008-11-21 03:32:49 UTC
SVN commit 887084 by winterz:

fix parseScheduleMessage() to work better with the new libical.
I really don't know how it worked at all before.

BUG: 175345


 M  +8 -15     icalformat.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=887084