fix parseScheduleMessage() to work better with the new libical. I really don't know how it worked at all before.

BUG: 175345

svn path=/trunk/KDE/kdepimlibs/; revision=887084